--- a/FastRCNN-PyTorch.ipynb
+++ b/FastRCNN-PyTorch.ipynb
@@ -19,6 +19,18 @@
    "source": [
     "import torch"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Project on hold for time being."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
